--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".TeacherHomeActivity" />
         <activity android:name=".UpdateProfileActivity" />
         <activity android:name=".RegisterSeminarActivity" />
-        <activity android:name=".UpdateSeminarActivity"></activity>
+        <activity android:name=".UpdateSeminarActivity" />
+        <activity android:name=".TeacherQRCodeActivity"></activity>
     </application>
 
 </manifest>
