--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.usp.ime.checkattendance">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -32,7 +34,10 @@
         <activity android:name=".UpdateSeminarActivity" />
         <activity android:name=".TeacherQRCodeActivity" />
         <activity android:name=".StudentQRCodeActivity" />
-        <activity android:name=".ListAttendeesActivity"></activity>
+        <activity android:name=".ListAttendeesActivity" />
+        <activity android:name=".BluetoothDeviceListActivity" />
+        <activity android:name=".StudentBluetoothActivity" />
+        <activity android:name=".TeacherBluetoothActivity"></activity>
     </application>
 
 </manifest>
