--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,10 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20160212'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
 }
